[package]
name = "flemozi"
version = "0.1.0"
authors = ["Kingkor Roy Tirtho"]
edition = "2024"
license = "GPL-2.0-or-later"

[dependencies]
iced = { version = "0.14", features = [
    "tokio",
    "fira-sans",
    "image",
] }
tracing = "0.1"
tracing-subscriber = "0.3"
tokio = { version = "1", features = ["fs", "time"] }
global-hotkey = "0.8"
tray-icon = { version = "0.24", default-features = false }
arboard = { version = "3", default-features = false, features = ["image-data"] }
image = "0.25"
raw-window-handle = "0.6.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
iced_gif = "0.14.0"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.62.2", features = [
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Foundation",
    "Win32_UI_Shell",
    "Win32_System_DataExchange",
    "Win32_System_Memory",
] }

[target.'cfg(target_os = "macos")'.dependencies]
core-graphics = "0.25"
core-foundation = "0.10"
objc2 = "0.6"
objc2-foundation = { version = "0.3", features = ["NSGeometry"] }

[target.'cfg(target_os = "windows")'.build-dependencies]
winres = "0.1"

[package.metadata.packager]
product_name = "Flemozi"
identifier = "dev.krtirtho.flemozi"
publisher = "Kingkor Roy Tirtho"
license_file = "LICENSE"
before_packaging_command = "cargo build --release --locked"
icons = ["assets/icon.ico", "assets/icon.icns"]
resources = ["assets/twemoji/"]

[[package.metadata.packager.binaries]]
path = "flemozi"
main = true

[package.metadata.packager.nsis]
installer_icon = "assets/icon.ico"
sidebar_image = "assets/icon.ico"

[package.metadata.packager.dmg]

[package.metadata.packager.macos]
backgroundApp = true
